[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster_maker"
version = "0.1.0"
description = "Educational clustering package for MA52109 practical"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]